Grid layout and fixes to alignment of inputs and buttons.

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,6 @@
 footer{
+  grid-area:footer;
+  align-self:end;
   @extend %center-content-vertical;
   justify-content:space-around;
   a{
