--- a/style.scss
+++ b/style.scss
@@ -19,21 +19,8 @@ $nightMode: false;
   align-items: center;
 }
 
-body{
-  margin:0;
-  display:flex;
-  flex-flow:column;
-  align-items:center;
-}
-
-#content{
-  overflow:auto;
-  padding:0;
-  min-width:60vw;
-  min-height: 80vh;
-}
 footer{
-  height:20vh;
+  height:15vh;
   width:100vw;
 }
 
@@ -56,18 +43,35 @@ button{
 }
 
 .icon-button{
+  display:flex;
   border:none;
   vertical-align: -50%;
   padding:0;
 }
 
 body{
+  margin:0;
   font-family:roboto, sans-serif;
   background: white;
   @if $nightMode{
     background: black;
     filter:invert(100%);
   }
+  // grid layout
+  display: grid;
+  grid-template-columns: 1fr 2fr 4fr 1fr ;
+  grid-template-rows: repeat(4, auto) 1fr;
+  grid-template-areas:
+          ". header header ."
+          ". settings settings ."
+          ". teamcreator songcreator ."
+          ". teamlist songlist ."
+          "footer footer footer footer";
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  align-items: start;
+  grid-row-gap:1.5em;
 }
 
 
